--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -1,7 +1,39 @@
-// @import "core/settings";
-// @import "core/reset";
-// @import "components/page";
-// @import "components/header";
-// @import "components/main";
-// @import "components/links";
-// @import "components/footer";
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+
+.header {
+    margin-left: 20px;
+    
+}
+
+.title {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+.main-content-container {
+width: 100%;
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+}
+
+.favourite-series {
+padding-top: 50px;    
+width: 30%;
+height: 100vh;
+display: flex;
+flex-direction: column;
+padding-left: 50px;
+
+}
+.consulted-series {
+padding-top: 50px;
+width: 70%;
+height: 100vh;
+display: flex;
+flex-direction: column;
+align-items: center;
+}
