--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    list-style-type: none;
   }
 
 .header {
@@ -36,4 +37,10 @@ height: 100vh;
 display: flex;
 flex-direction: column;
 align-items: center;
+
+}
+.main-title{
+margin-top: 20px;
+margin-bottom: 20px;
+
 }
