paint favourites with errors

--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -18,6 +18,7 @@
       </header>
       <main class="main-content-container">
         <section class="favourite-series">
+          <h2 class="subtitle">Mis series favoritas:</h2>
           <ul class="favourites-list"></ul>
         </section>
         <section class="consulted-series">
