--- a/_src/assets/scss/main.scss
+++ b/_src/assets/scss/main.scss
@@ -41,9 +41,12 @@ img{
     width: 100px;
     padding-bottom: 20px;
 }
+.erase-button{
+    margin-left: 20px;
+}
 .main-title{
 
-    padding-left: 30px;
+    padding-left: 10px;
 }
 
 }
