--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Adalab Examen Javascript - Eli Alkorta</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/css/main.css" />
   </head>
 
@@ -13,7 +15,7 @@
     <div class="page">
       <header class="header">
         <h1 class="title">Buscador de series</h1>
-        <input id="series-name" type="text" name="series-name">
+        <input id="series-name" type="text" name="series-name" />
         <button type="button" class="search-button">Search</button>
       </header>
       <main class="main-content-container">
@@ -28,5 +30,4 @@
     </div>
     <script type="text/javascript" src="./assets/js/main.js"></script>
   </body>
-
 </html>
